@@ -297,6 +297,7 @@ namespace Tomboy
 		bool open_start_here;
 		string open_note_uri;
 		string open_note_name;
+		string open_external_note_path;
 		string highlight_search;
 		string note_path;
 		string search_text;
@@ -320,7 +321,8 @@ namespace Tomboy
 						open_note_name != null ||
 						open_note_uri != null || 
 						open_search ||
-						open_start_here;
+						open_start_here ||
+						open_external_note_path != null;
 			}
 		}
 
@@ -422,14 +424,11 @@ namespace Tomboy
 					// If the argument looks like a Uri, treat it like a Uri.
 					if (args [idx].StartsWith ("note://tomboy/"))
 						open_note_uri = args [idx];
-					else {
-						//open_note_name = args [idx];
-						string open_arg = args [idx];
-						if (File.Exists (open_arg)) {
-							// TODO
-						}
-						else
-							open_note_name = args [idx];
+					else if (File.Exists (args [idx])) {
+						// This is potentially a note file
+						open_external_note_path = args [idx];
+					} else {
+						open_note_name = args [idx];
 					}
 
 					break;
@@ -572,6 +571,31 @@ namespace Tomboy
 								      highlight_search);
 				else
 					remote.DisplayNote (open_note_uri);
+			}
+			
+			if (open_external_note_path != null) {
+				string note_id = Path.GetFileNameWithoutExtension (open_external_note_path);
+				if (note_id != null && note_id != string.Empty) {
+					// Attempt to load the note, assuming it might already
+					// be part of our notes list.
+					if (remote.DisplayNote (
+							string.Format ("note://tomboy/{0}", note_id)) == false) {
+						// Not an existing note.  Create a new note.
+						string note_uri = remote.CreateNote ();
+						
+						if (note_uri != null) {
+							// Load in the XML contents of the note file
+							StreamReader sr = File.OpenText (open_external_note_path);
+							if (sr != null) {
+								string note_xml = sr.ReadToEnd ();
+								if (note_xml != null) {
+									if (remote.SetNoteContentsCompleteXml (note_uri, note_xml))
+										remote.DisplayNote (note_uri);
+								}
+							}
+						}
+					}
+				}
 			}
 			
 			if (open_search) {
